Fix tabs__list overflow. (#104)

--- a/resources/css/tabs.css
+++ b/resources/css/tabs.css
@@ -9,6 +9,13 @@
 .tabs__list {
 	position: relative;
 	display: flex;
+	overflow-x-: scroll;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+
+	&::-webkit-scrollbar {
+		display: none;
+	}
 
 	&[data-orientation="horizontal"] {
 		align-items: center;
